Move MySQL lookup to its own page

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('view_stats') }}"><i class="bi bi-bar-chart"></i> Statistics</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('view_cache') }}"><i class="bi bi-hdd"></i> Cache</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('list_results') }}"><i class="bi bi-folder2-open"></i> Files</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('mysql_lookup_page') }}"><i class="bi bi-search"></i> DB Lookup</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('manage_connections') }}"><i class="bi bi-database"></i> MySQL</a></li>
                 </ul>
             </div>
