--- a/templates/mysql_lookup.html
+++ b/templates/mysql_lookup.html
@@ -60,9 +60,8 @@
 </div>
 <script>
 function toInputValue(d) {
-    const pad = n => n.toString().padStart(2, '0');
-    return `${d.getFullYear()}-${pad(d.getMonth() + 1)}-${pad(d.getDate())}` +
-        `T${pad(d.getHours())}:${pad(d.getMinutes())}`;
+    const local = new Date(d.getTime() - d.getTimezoneOffset() * 60000);
+    return local.toISOString().slice(0, 16);
 }
 
 function applyDateRange() {
