--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('list_results') }}"><i class="bi bi-folder2-open"></i> Files</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('mysql_lookup_page') }}"><i class="bi bi-search"></i> DB Lookup</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('manage_connections') }}"><i class="bi bi-database"></i> MySQL</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('settings_page') }}"><i class="bi bi-gear"></i> Settings</a></li>
                 </ul>
             </div>
         </div>
