--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,10 @@ body {
     background-color: #f8fafc;
 }
 
+.navbar .nav-link.active {
+    font-weight: 600;
+}
+
 .container {
     max-width: 1100px;
 }
